--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,97 +1,138 @@
 <a class="skip-navigation" tabindex="1" href="#main-content">{{t 'skip_navigation' }}</a>
 
 <header class="header">
-  <div class="logo">
-    {{#link 'help_center'}}
-      <img src="{{settings.logo}}" alt="{{t 'home_page' name=help_center.name}}" />
-      {{#if settings.show_brand_name}}
-        <span aria-hidden="true">{{help_center.name}}</span>
-      {{/if}}
-    {{/link}}
-  </div>
-
-  <div class="nav-wrapper-desktop">
-    <nav class="user-nav" id="user-nav" aria-label="{{t 'user_navigation'}}">
-      <ul class="user-nav-list">
-        <li>{{link 'community'}}</li>
-        <li>{{link 'new_request' class='submit-a-request'}}</li>
-        {{#unless signed_in}}
-          <li>
-            {{#link "sign_in" class="sign-in"}}
-              {{t 'sign_in'}}
-            {{/link}}
-          </li>
-        {{/unless}}
-      </ul>
-    </nav>
-    {{#if signed_in}}
-      <div class="user-info dropdown">
-        <button class="dropdown-toggle" aria-haspopup="true">
-          {{user_avatar class="user-avatar"}}
-          <span>
+    <div class="nav-wrapper-desktop">
+        <nav class="user-nav" id="user-nav" aria-label="{{t 'user_navigation'}}">
+            <ul class="user-nav-list">
+                <li>{{link 'community'}}</li>
+                <li>{{link 'new_request' class='submit-a-request'}}</li>
+                        {{#unless signed_in}}
+                    <li>
+                                {{#link "sign_in" class="sign-in"}}
+                            {{t 'sign_in'}}
+                                {{/link}}
+                    </li>
+                        {{/unless}}
+            </ul>
+        </nav>
+                {{#if signed_in}}
+            <div class="user-info dropdown">
+                <button class="dropdown-toggle" aria-haspopup="true">
+                    {{user_avatar class="user-avatar"}}
+                    <span>
             {{user_name}}
-            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="dropdown-chevron-icon" aria-hidden="true">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false"
+                             viewBox="0 0 12 12" class="dropdown-chevron-icon" aria-hidden="true">
               <path fill="none" stroke="currentColor" stroke-linecap="round" d="M3 4.5l2.6 2.6c.2.2.5.2.7 0L9 4.5"/>
             </svg>
           </span>
-        </button>
-        <div class="dropdown-menu" role="menu">
-          {{#my_profile role="menuitem"}}{{t 'profile'}}{{/my_profile}}
-          {{link "requests" role="menuitem"}}
-          {{#link "contributions" role="menuitem"}}{{t "activities"}}{{/link}}
-          {{contact_details role="menuitem"}}
-          {{change_password role="menuitem"}}
-          <div class="separator" role="separator"></div>
-          {{link "sign_out" role="menuitem"}}
-        </div>
-      </div>
-    {{/if}}
-  </div>
+                </button>
+                <div class="dropdown-menu" role="menu">
+                    {{#my_profile role="menuitem"}}{{t 'profile'}}{{/my_profile}}
+                    {{link "requests" role="menuitem"}}
+                    {{#link "contributions" role="menuitem"}}{{t "activities"}}{{/link}}
+                    {{contact_details role="menuitem"}}
+                    {{change_password role="menuitem"}}
+                    <div class="separator" role="separator"></div>
+                    {{link "sign_out" role="menuitem"}}
+                </div>
+            </div>
+                {{/if}}
+    </div>
 
-  <div class="nav-wrapper-mobile">
-    <button class="menu-button-mobile" aria-controls="user-nav-mobile" aria-expanded="false" aria-label="{{t 'toggle_navigation'}}">
-      {{#if signed_in}}
-        {{user_avatar class="user-avatar"}}
-      {{/if}}
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" focusable="false" viewBox="0 0 16 16" class="icon-menu">
-        <path fill="none" stroke="currentColor" stroke-linecap="round" d="M1.5 3.5h13m-13 4h13m-13 4h13"/>
-      </svg>
-    </button>
-    <nav class="menu-list-mobile" id="user-nav-mobile" aria-expanded="false">
-      <ul class="menu-list-mobile-items">
-        {{#if signed_in}}
-          <li class="user-avatar-item item">
-            {{#my_profile role="menuitem" class="my-profile"}}
-              {{user_avatar class="menu-profile-avatar"}}
-              <div class="menu-profile-name">
-                <div>{{user_name}}</div>
-                <div class="my-profile-tooltip">{{t 'profile'}}</div>
-              </div>
-            {{/my_profile}}
-          </li>
-          <li class="item">{{link "requests" role="menuitem"}}</li>
-          <li class="item">{{#link "contributions" role="menuitem"}}{{t "activities"}}{{/link}}</li>
-          <li class="item">{{contact_details role="menuitem"}}</li>
-          <li class="item">{{change_password role="menuitem" class='change-password'}}</li>
-          <li class="nav-divider"></li>
-        {{else}}
-          <li class="item">
-            {{#link "sign_in" role="menuitem"}}
-              {{t 'sign_in'}}
-            {{/link}}
-          </li>
-          <li class="nav-divider"></li>
-        {{/if}}
-        <li class="item">{{link 'community' role="menuitem"}}</li>
-        <li class="item">{{link 'new_request' role="menuitem" class='submit-a-request'}}</li>
-        <li class="nav-divider"></li>
-        {{#if signed_in}}
-          <li class="item">
-            {{link "sign_out" role="menuitem"}}
-          </li>
-        {{/if}}
-      </ul>
-    </nav>
-  </div>
+    <div class="nav-wrapper-mobile">
+        <button class="menu-button-mobile" aria-controls="user-nav-mobile" aria-expanded="false"
+                aria-label="{{t 'toggle_navigation'}}">
+                    {{#if signed_in}}
+                {{user_avatar class="user-avatar"}}
+                    {{/if}}
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" focusable="false" viewBox="0 0 16 16"
+                 class="icon-menu">
+                <path fill="none" stroke="currentColor" stroke-linecap="round" d="M1.5 3.5h13m-13 4h13m-13 4h13"/>
+            </svg>
+        </button>
+        <nav class="menu-list-mobile" id="user-nav-mobile" aria-expanded="false">
+            <ul class="menu-list-mobile-items">
+                        {{#if signed_in}}
+                    <li class="user-avatar-item item">
+                                {{#my_profile role="menuitem" class="my-profile"}}
+                            {{user_avatar class="menu-profile-avatar"}}
+                            <div class="menu-profile-name">
+                                <div>{{user_name}}</div>
+                                <div class="my-profile-tooltip">{{t 'profile'}}</div>
+                            </div>
+                                {{/my_profile}}
+                    </li>
+                    <li class="item">{{link "requests" role="menuitem"}}</li>
+                    <li class="item">{{#link "contributions" role="menuitem"}}{{t "activities"}}{{/link}}</li>
+                    <li class="item">{{contact_details role="menuitem"}}</li>
+                    <li class="item">{{change_password role="menuitem" class='change-password'}}</li>
+                    <li class="nav-divider"></li>
+                        {{else}}
+                    <li class="item">
+                                {{#link "sign_in" role="menuitem"}}
+                            {{t 'sign_in'}}
+                                {{/link}}
+                    </li>
+                    <li class="nav-divider"></li>
+                        {{/if}}
+                <li class="item">{{link 'community' role="menuitem"}}</li>
+                <li class="item">{{link 'new_request' role="menuitem" class='submit-a-request'}}</li>
+                <li class="nav-divider"></li>
+                        {{#if signed_in}}
+                    <li class="item">
+                        {{link "sign_out" role="menuitem"}}
+                    </li>
+                        {{/if}}
+            </ul>
+        </nav>
+    </div>
 
 </header>
+<nav class="navbar desktop double">
+    <div class="top">
+        <div class="left">
+            <a class="button secondary no-shadow" href="https://www.vadavo.com/">
+                Ir a VADAVO.com
+            </a>
+        </div>
+        <div class="center">
+            {{search submit=false instant=settings.instant_search class='search-form'}}
+        </div>
+        <div class="right">
+            <div class="contact-info">
+                <div>
+                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"></path>
+                    </svg>
+                    <span>(+34) 960 30 50 50</span>
+                </div>
+                <div>
+                    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"></path>
+                    </svg>
+                    <span>soporte@vadavo.com</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bottom">
+        <div class="left">
+            {{#link 'help_center'}}
+                <img src="{{settings.logo}}" alt="{{t 'home_page' name=help_center.name}}"/>
+                <span class="subtitle">Soporte</span>
+            {{/link}}
+        </div>
+        <div class="center">Categorías</div>
+        <div class="right" style="display: flex; gap: 1em;">
+            {{#link 'new_request' class='button primary no-shadow'}}Crear un ticket{{/link}}
+            {{#if signed_in}}
+                {{#link "requests" role="menuitem"}}Mis tickets{{/link}}
+                {{#link "sign_out" role="menuitem"}}Cerrar sesión{{/link}}
+            {{else}}
+                {{#link 'sign_in'}}Iniciar sesión{{/link}}
+            {{/if}}
+        </div>
+    </div>
+</nav>
