--- a/styles/_home-page.scss
+++ b/styles/_home-page.scss
@@ -1,81 +1,48 @@
-/***** Homepage *****/
+.hero {
+    padding: 2em;
+    max-width: 1024px;
+    margin: 0 auto;
+    text-align: center;
 
-.section {
-  @include tablet {
-    margin-bottom: 60px;
-  }
+    h1 {
+        margin-top: 2em;
+        margin-bottom: 1em;
+    }
 
-  margin-bottom: 40px;
+    p {
+        margin-bottom: 2em;
+    }
+
+    .search-form {
+        margin: 0 auto 4em;
+        width: 70%;
+    }
 }
 
-.home-section h2 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-/***** Promoted articles *****/
-
-.promoted-articles {
-  @include desktop { flex-direction: row; }
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-
-  &-item {
-    @include desktop {
-      align-self: flex-end;
-      flex: 0 0 auto;
-      padding-right: 30px;
-      width: 33%; /* Three columns on desktop */
-
-      [dir="rtl"] & { padding: 0 0 0 30px; }
+#categories {
+    h2 {
+        text-align: center;
+        margin-top: 1em;
+        margin-bottom: 1em;
     }
 
-    flex: 1 0 auto;
+    >.categories {
+        max-width: 1024px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 2em;
 
-    &:nth-child(3n) {
-      padding-right: 0;
+        @media screen and (min-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+        }
+
+        @media screen and (min-width: 1024px) {
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+
+        .category-Correos {
+            @extend .icon-email;
+        }
     }
-
-    a {
-      display: block;
-      border-bottom: 1px solid $low-contrast-border-color;
-      padding: 15px 0;
-    }
-
-    .icon-lock {
-      vertical-align: baseline;
-    }
-
-    &:last-child a {
-      @include desktop {
-        border-bottom: 1px solid $low-contrast-border-color;
-      }
-
-      border: 0;
-    }
-  }
-
-}
-
-/***** Community section in homepage *****/
-.community {
-  text-align: center;
-
-  &-image {
-    min-height: 300px;
-    margin-top: 32px;
-    background-image: url($community_image);
-    background-position: center;
-    background-repeat: no-repeat;
-    max-width: 100%;
-  }
-
-  @include standalone-link;
-}
-
-.community,
-.activity {
-  border-top: 1px solid $low-contrast-border-color;
-  padding: 30px 0;
 }
