--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -1,14 +1,14 @@
-<footer class="footer">
+<footer class="footer" style="margin-top: 0;">
     <div class="logo">
-        LOGO
+        <img src="{{settings.footer_logo}}" alt="Logotipo de VADAVO"/>
     </div>
 
     <div class="under-line">
         <div class="company-name">&copy; 2024 VADAVO · Todos los derechos reservados.</div>
         <ul class="menu">
-            <li><a href="https://vadavo.eu/aviso-legal">Aviso legal</a></li>
-            <li><a href="https://vadavo.eu/politica-de-privacidad">Política de privacidad</a></li>
-            <li><a href="https://vadavo.eu/politica-de-cookies">Política de cookies</a></li>
+            <li><a target="_blank" href="https://www.vadavo.com/legal/">Aviso legal</a></li>
+            <li><a target="_blank" href="https://www.vadavo.com/privacidad/">Política de privacidad</a></li>
+            <li><a target="_blank" href="https://www.vadavo.com/cookies/">Política de cookies</a></li>
         </ul>
     </div>
 </footer>
