--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,5 +2,14 @@
 @import "components/search_form";
 
 @import "home-page";
+@import "error-page";
+@import "post-page";
 @import "header";
 @import "search_results";
+@import "highlight";
+
+.breadcrumbs {
+    li:first-child {
+        display: none;
+    }
+}
