--- a/templates/error_page.hbs
+++ b/templates/error_page.hbs
@@ -1,21 +1,24 @@
-<div class="container-divider"></div>
 <div id="main-content" class="error-page">
-  <h1>{{t 'oops'}}</h1>
+    <h1>{{t 'oops'}}</h1>
 
-  {{#is error 'unauthorized'}}
-    <h2>{{link 'sign_in'}}</h2>
-  {{/is}}
+    {{#is error 'unauthorized'}}
+        <p>Debes de iniciar sesión para acceder a esta página.</p>
+        <p>{{link 'sign_in'}}</p>
+    {{/is}}
 
-  {{#is error 'forbidden'}}
-    <h2>{{t 'not_authorized'}}</h2>
-  {{/is}}
+    {{#is error 'forbidden'}}
+        <p>{{t 'not_authorized'}}</p>
+    {{/is}}
 
-  {{#is error 'not_found'}}
-    <h2>{{t 'nonexistent_page'}}</h2>
-    <p>{{t 'mistyped_address_or_moved_page'}}</p>
-  {{/is}}
+    {{#is error 'not_found'}}
+        <p>{{t 'nonexistent_page'}}</p>
+        <p>{{t 'mistyped_address_or_moved_page'}}</p>
+    {{/is}}
 
-  {{#link 'help_center'}}
-    {{t 'back_to_homepage'}}
-  {{/link}}
+    <div class="back-to-homepage">
+        {{#link 'help_center'}}
+            {{t 'back_to_homepage'}}
+        {{/link}}
+    </div>
+
 </div>
