--- a/style.css
+++ b/style.css
@@ -1984,15 +1984,13 @@ textarea.textfield {
   text-transform: uppercase;
 }
 
-article {
+.article-container {
   max-width: 1440px;
   margin: 0 auto;
 }
 
 .article-votes {
   text-align: center;
-  max-width: 1440px;
-  margin: 0 auto 4em;
   padding-top: 4em;
   border-top: 2px solid hsl(0, 0%, 93%);
 }
