--- a/styles/_post-page.scss
+++ b/styles/_post-page.scss
@@ -29,15 +29,13 @@
     }
 }
 
-article {
+.article-container {
     max-width: 1440px;
     margin: 0 auto;
 }
 
 .article-votes {
     text-align: center;
-    max-width: 1440px;
-    margin: 0 auto 4em;
     padding-top: 4em;
     border-top: 2px solid hsla(0, 0%, 93%, 1);
 
